@@ -1,3 +1,8 @@
+2009-08-26  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Projection/ProjFourWrapper.cs: Project and Deproject were
+	swapped in behavior
+
 2009-07-28  Scott Ellington  <scott.ellington@gmail.com>
 
 	* AssemblyInfo.cs: bump version to 0.4.2
